# crew_ai_example

./: .dockerignore  .env.example  Dockerfile  Readme.md  app.py  command.md  output.md  requirements.txt  test.py
client/: next.config.ts  package-lock.json  package.json
client/src/app/: layout.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/(protected)/: layout.tsx
client/src/app/(root)/: layout.tsx  page.tsx
client/src/components/: input-box.tsx
client/src/lib/: book_researcher.json  data.ts  debater.json  engineering_team.json  utils.ts
crew_course/book_researcher/: README.md  pyproject.toml
crew_course/book_researcher/src/book_researcher/: crew.py  main.py
crew_course/book_researcher/src/book_researcher/config/: tasks.yaml
crew_course/coder/output/: code_and_output.txt
crew_course/coder/src/coder/: crew.py  main.py
crew_course/debate/output/: decide.md  oppose.md  propose.md
crew_course/engineering_team/: pyproject.toml
crew_course/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crew_course/financial_researcher/output/: report.md
crew_course/ghost_writer/: README.md  pyproject.toml
crew_course/stock_picker/: pyproject.toml
src/crew/book_researcher_crew/: book_researcher_crew.py
src/crew/debate_crew/: debate_crew.py
src/crew/engineering_team_crew/: engineering_team_crew.py
src/crew/financial_researcher_crew/: financial_researcher.py
src/event_listener/: custom_event_streamer.py  print_all_eventlistener.py
src/llms/: gemini_llm.py  opeanai_llm.py
(+58 files in other folders)
