[project]
name = "book_researcher"
version = "0.1.0"
description = "book_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
book_researcher = "book_researcher.main:run"
run_crew = "book_researcher.main:run"
train = "book_researcher.main:train"
replay = "book_researcher.main:replay"
test = "book_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
